# gene-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
derive/: Cargo.toml
derive/src/: lib.rs
event_derive/: Cargo.toml
event_derive/src/: lib.rs
gene/: Cargo.toml
gene/benches/: engine_benchmark.rs
gene/benches/data/: .gitignore  compiled.gen
gene/src/: compiler.rs  engine.rs  event.rs  lib.rs  map.rs  paths.rs  rules.rs  template.rs  values.rs
gene/src/rules/: condition.rs  map.rs  matcher.rs
gene/src/rules/condition/: condition_test.rs
gene/src/rules/grammars/: condition.pest  match.pest
gene/tests/: generic_json_test.rs  rust_events_test.rs
gene/tests/data/: compiled.gen
gene_derive/: Cargo.toml
gene_derive/src/: lib.rs
