[workspace]
resolver = "2"
members = ["gene", "derive"]

[workspace.package]
version = "0.4.2"
rust-version = "1.65.0"
authors = ["Quentin JEROME"]
edition = "2021"
license = "GPL-3.0"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/gene"
repository = "https://github.com/kunai-project/gene-rs"
