[package]
name = "gene"
description = "Crate providing a log matching framework written in Rust"
authors.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
documentation = "https://docs.rs/gene"
keywords = [
    "log-processing",
    "signature-engine",
    "security",
    "threat-detection",
]

[dependencies]
gene_derive = { path = "../derive", version = ">=0.1.0" }
pest = "2.7.15"
pest_derive = "2.7.15"
lazy_static = "1.4.0"
thiserror = "1.0.50"
regex = "1.10.2"
serde_yaml = { version = "0.9.27" }
serde = { version = "1.0.192", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.108"
libflate = "2.0.0"
criterion = "0.5.1"

[[bench]]
name = "engine_benchmark"
harness = false
